# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
locale/ru/LC_MESSAGES/: .django.po.swp  django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filter.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  delete_form.html  index.html
task_manager/templates/labels/: index.html
task_manager/templates/registration/: form.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: index.html  task_detail.html
task_manager/templates/users/: index.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_user.py
task_manager/tests/fixtures/: labels.json  statuses.json  task.json  users.json
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
