[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["task_manager"]


[dependency-groups]
dev = [
	"pytest>=8.3.4",
	"pytest-cov>=6.0.0",
	"ruff>=0.9.2",
	"flake8>=7.0.0",
	"mypy>=1.8.0",
]
