[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"django>=5.0.6",
	"python-dotenv>=1.0.1",
	"gunicorn>=22.0.0",
	"psycopg2-binary>=2.9.9",
	"dj-database-url>=2.1.0",
	"django-bootstrap5>=24.2",
	"django-filter>=25.1",
	"djangorestframework>=3.15.1",
	"rollbar>=0.16.3",
	]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
